# mbed

./: .mbedignore  main_USB.cpp  pinnames_migration.py
.github/workflows/: action_astyle.ignore  astyle.yml  build_nucleoL552_tfm.yml
connectivity/drivers/ble/FEATURE_BLE/TARGET_STM32WB/: CMakeLists.txt  HCIDriver.cpp
connectivity/drivers/ble/FEATURE_BLE/TARGET_STM32WB/STM32Cube_FW/: hw_ipcc.c
features/FEATURE_BLE/targets/TARGET_STM/TARGET_STM32WB/: HCIDriver.cpp
hal/tests/TESTS/pin_names/: pinvalidate.py
platform/include/platform/: mbed_power_mgmt.h
platform/source/: mbed_power_mgmt.c
targets/: targets.json
targets/TARGET_STM/: README.md  USBPhy_STM32.cpp  i2c_api.c  pinmap.c  stm_spi_api.c
targets/TARGET_STM/TARGET_STM32L4/TARGET_STM32L4R9xI/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L5/: flash_api.c  system_clock.c
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q/: tfm_s.axf
targets/TARGET_STM/TARGET_STM32L5/TARGET_STM32L552xE/TARGET_NUCLEO_L552ZE_Q_NPSA/: CMakeLists.txt
targets/TARGET_STM/TARGET_STM32WB/STM32Cube_FW/: app_conf.h
targets/TARGET_STM/TARGET_STM32WB/TARGET_STM32WB55xx/: cmsis_nvic.h
targets/TARGET_STM/TARGET_STM32WB/TARGET_STM32WB55xx/TOOLCHAIN_ARM/: stm32wb55xx.sct
targets/TARGET_STM/TARGET_STM32WB/TARGET_STM32WB55xx/TOOLCHAIN_GCC_ARM/: stm32wb55xx.ld
targets/TARGET_STM/TARGET_STM32WB/TARGET_STM32WB5MxG/TARGET_DISCO_WB5MMG/: Rgb_led.cpp
tools/export/iar/: iar_definitions.json
